Fix layout issues on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 @import './normalize.css';
 @import './dropdown.css';
 @import './theme.css';
+@import './components.css';
 @import './utility.css';
 
 :root {
@@ -33,268 +34,4 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-family);
-}
-
-.header {
-  display: flex;
-  justify-content: end;
-  width: 100%;
-  padding: 2rem 1rem;
-  box-sizing: border-box;
-  background-color: var(--color-calc);
-}
-
-.icon {
-  background-color: transparent;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  filter: url('#borderFilter');
-  touch-action: manipulation;
-}
-
-.memory-container {
-  filter: brightness(0.6);
-}
-
-.calc {
-  background-color: var(--calc-bg);
-  flex: 1;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(7, minmax(90px, 1fr));
-  grid-template-rows: minmax(140px, auto) repeat(3, 1fr);
-  grid-auto-rows: 1fr;
-  gap: 2px;
-  grid-template-areas:
-    'out out out out out out out'
-    'e1 e2 e3 s1 s2 s3 op1'
-    'e4 e5 e6 b7 b8 b9 op2'
-    'e7 e8 e9 b4 b5 b6 op3'
-    'e10 e11 e12 b1 b2 b3 op4'
-    'e13 e14 e15 b0 b0 com op5';
-}
-
-.output {
-  grid-area: out;
-  overflow: visible;
-  padding: 1rem;
-  color: var(--text-color);
-}
-
-.button {
-  --bg: var(--button-bg);
-  --fg: var(--button-fg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--bg);
-  font-weight: 500;
-  font-size: var(--text-md);
-  color: var(--fg);
-}
-
-.button:hover {
-  filter: brightness(0.9);
-}
-
-.button:active {
-  filter: brightness(0.8);
-}
-
-.button__icon {
-  width: 2.4rem;
-  fill: currentColor;
-  pointer-events: none;
-}
-
-.button_operator {
-  --bg: var(--operator-bg);
-  --fg: var(--operator-fg);
-}
-
-.button_special {
-  background-color: var(--special-bg);
-  color: var(--special-fg);
-}
-
-.button_active {
-  background-color: var(--fg);
-  color: var(--bg);
-}
-
-.button_com {
-  grid-area: com;
-}
-
-.button_op1 {
-  grid-area: op1;
-}
-
-.button_op2 {
-  grid-area: op2;
-}
-
-.button_op3 {
-  grid-area: op3;
-}
-.button_op4 {
-  grid-area: op4;
-}
-
-.button_op5 {
-  grid-area: op5;
-}
-
-.button_s1 {
-  grid-area: s1;
-}
-
-.button_s2 {
-  grid-area: s2;
-}
-
-.button_s3 {
-  grid-area: s3;
-}
-
-.button_e1 {
-  grid-area: e1;
-}
-
-.button_e2 {
-  grid-area: e2;
-}
-
-.button_e3 {
-  grid-area: e3;
-}
-
-.button_e4 {
-  grid-area: e4;
-}
-
-.button_e5 {
-  grid-area: e5;
-}
-
-.button_e6 {
-  grid-area: e6;
-}
-
-.button_e7 {
-  grid-area: e7;
-}
-
-.button_e8 {
-  grid-area: e8;
-}
-
-.button_e9 {
-  grid-area: e9;
-}
-
-.button_e10 {
-  grid-area: e10;
-}
-
-.button_e11 {
-  grid-area: e11;
-}
-
-.button_e12 {
-  grid-area: e12;
-}
-
-.button_e13 {
-  grid-area: e13;
-}
-
-.button_e14 {
-  grid-area: e14;
-}
-
-.button_e15 {
-  grid-area: e15;
-}
-
-.button_0 {
-  grid-area: b0;
-}
-
-.button_1 {
-  grid-area: b1;
-}
-
-.button_2 {
-  grid-area: b2;
-}
-
-.button_3 {
-  grid-area: b3;
-}
-
-.button_4 {
-  grid-area: b4;
-}
-
-.button_5 {
-  grid-area: b5;
-}
-
-.button_6 {
-  grid-area: b6;
-}
-
-.button_7 {
-  grid-area: b7;
-}
-
-.button_8 {
-  grid-area: b8;
-}
-
-.button_9 {
-  grid-area: b9;
-}
-
-.button_0 {
-  grid-area: b0;
-}
-
-@media screen and (min-width: 768px) {
-  :root {
-    --border-radius: 10px;
-  }
-
-  .header {
-    padding: 1rem;
-    max-width: var(--max-w);
-    border-radius: var(--border-radius) var(--border-radius) 0 0;
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--background-color);
-    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
-  }
-
-  .calc {
-    position: relative;
-    max-width: var(--max-w);
-    min-height: 54rem;
-    flex: 0 0 auto;
-    overflow: hidden;
-    border-radius: 0 0 var(--border-radius) var(--border-radius);
-  }
-
-  .button {
-    filter: url('#borderFilter');
-  }
 }
