--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -21,3 +21,9 @@
 .z-10 {
   z-index: 10;
 }
+
+@media screen and (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+}
